--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -83,14 +83,25 @@ The white group has a percentage of 65.1 of favor with a 34.9 to oppose. While t
 
 
 
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
+```{r}
+chisq.test(table2)
+chisqtestGC(table2)
+```
+
+the p value is 0.00000000000000022 being very low. Meaning something is going on and a fisher.t test must be used to see what is going on.
 
 ## More data version
 
+```{r}
+fisherXY(mydata$race,mydata$cappun, confL = .99)
+```
+In the fisherXY test all the p values were different and some were extremely low such as comparing white and black groups having 0.0000000000000022. compared to the p value of white and other groups being 0.002607. 
 
 # Discussion and Conclusion
 
